Add in more bsae fx

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
     :root {
         --background: 0 0% 100%;
@@ -65,8 +66,19 @@
     }
 }
 
+/*
+
+html,
 body {
-    /* 
-    touch-action: none;
-    */
+  position: fixed;
+  overflow: hidden;
 }
+
+body > .mainwrapper {
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch; 
+}
+
+*/
