--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,14 @@
     }
 }
 
+/* prevent pinch-zoom for Chrome 36+, Safari 13+ */
+html {
+    touch-action: pan-x pan-y;
+    overscroll-behavior: none;
+
+    /*min-height: 100dvh;  prevent pinch-zoom at page bottom */
+}
+
 /*
 
 html,
