Add in fix for title bar quirk

--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,8 @@ html {
     touch-action: pan-x pan-y;
     overscroll-behavior: none;
 }
+
+body {
+    padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
+        env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
+}
