--- a/src/index.css
+++ b/src/index.css
@@ -57,12 +57,19 @@
         --chart-5: 340 75% 55%;
     }
 }
+
 @layer base {
     * {
         @apply border-border;
     }
     body {
         @apply bg-background text-foreground;
+    }
+}
+
+@layer components {
+    .icon-field-type {
+        @apply max-w-[20svw] w-full;
     }
 }
 
