--- a/src/index.css
+++ b/src/index.css
@@ -73,12 +73,11 @@
     }
 }
 
+/* h-dvh */
+
 html {
     touch-action: pan-x pan-y;
     overscroll-behavior: none;
-}
-
-html {
     padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
         env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
 }
